cmake_minimum_required(VERSION 3.8)
project(sysbench)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/drivers/attachsql/drv_attachsql.c
        src/drivers/drizzle/drv_drizzle.c
        src/drivers/mysql/drv_mysql.c
        src/drivers/oracle/drv_oracle.c
        src/drivers/pgsql/drv_pgsql.c
        src/drivers/tarantool/drv_tarantool.c
        src/tests/cpu/sb_cpu.c
        src/tests/fileio/crc32.c
        src/tests/fileio/crc32.h
        src/tests/fileio/crc32tbl.h
        src/tests/fileio/sb_fileio.c
        src/tests/memory/sb_memory.c
        src/tests/mutex/sb_mutex.c
        src/tests/threads/sb_threads.c
        src/tests/sb_cpu.h
        src/tests/sb_fileio.h
        src/tests/sb_memory.h
        src/tests/sb_mutex.h
        src/tests/sb_threads.h
        src/db_driver.c
        src/db_driver.h
        src/sb_barrier.c
        src/sb_barrier.h
        src/sb_ck_pr.h
        src/sb_counter.c
        src/sb_counter.h
        src/sb_global.h
        src/sb_histogram.c
        src/sb_histogram.h
        src/sb_list.h
        src/sb_logger.c
        src/sb_logger.h
        src/sb_lua.c
        src/sb_lua.h
        src/sb_options.c
        src/sb_options.h
        src/sb_rand.c
        src/sb_rand.h
        src/sb_thread.c
        src/sb_thread.h
        src/sb_timer.c
        src/sb_timer.h
        src/sb_util.c
        src/sb_util.h
        src/sb_win.c
        src/sb_win.h
        src/sysbench.c
        src/sysbench.h
        src/xoroshiro128plus.h
        third_party/concurrency_kit/ck/include/gcc/aarch64/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/aarch64/ck_pr.h
        third_party/concurrency_kit/ck/include/gcc/aarch64/ck_pr_llsc.h
        third_party/concurrency_kit/ck/include/gcc/aarch64/ck_pr_lse.h
        third_party/concurrency_kit/ck/include/gcc/arm/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/arm/ck_pr.h
        third_party/concurrency_kit/ck/include/gcc/ppc/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/ppc/ck_pr.h
        third_party/concurrency_kit/ck/include/gcc/ppc64/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/ppc64/ck_pr.h
        third_party/concurrency_kit/ck/include/gcc/s390x/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/s390x/ck_pr.h
        third_party/concurrency_kit/ck/include/gcc/sparcv9/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/sparcv9/ck_pr.h
        third_party/concurrency_kit/ck/include/gcc/x86/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/x86/ck_pr.h
        third_party/concurrency_kit/ck/include/gcc/x86_64/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/x86_64/ck_pr.h
        third_party/concurrency_kit/ck/include/gcc/x86_64/ck_pr_rtm.h
        third_party/concurrency_kit/ck/include/gcc/ck_cc.h
        third_party/concurrency_kit/ck/include/gcc/ck_f_pr.h
        third_party/concurrency_kit/ck/include/gcc/ck_pr.h
        third_party/concurrency_kit/ck/include/spinlock/anderson.h
        third_party/concurrency_kit/ck/include/spinlock/cas.h
        third_party/concurrency_kit/ck/include/spinlock/clh.h
        third_party/concurrency_kit/ck/include/spinlock/dec.h
        third_party/concurrency_kit/ck/include/spinlock/fas.h
        third_party/concurrency_kit/ck/include/spinlock/hclh.h
        third_party/concurrency_kit/ck/include/spinlock/mcs.h
        third_party/concurrency_kit/ck/include/spinlock/ticket.h
        third_party/concurrency_kit/ck/include/ck_array.h
        third_party/concurrency_kit/ck/include/ck_backoff.h
        third_party/concurrency_kit/ck/include/ck_barrier.h
        third_party/concurrency_kit/ck/include/ck_bitmap.h
        third_party/concurrency_kit/ck/include/ck_brlock.h
        third_party/concurrency_kit/ck/include/ck_bytelock.h
        third_party/concurrency_kit/ck/include/ck_cc.h
        third_party/concurrency_kit/ck/include/ck_cohort.h
        third_party/concurrency_kit/ck/include/ck_elide.h
        third_party/concurrency_kit/ck/include/ck_epoch.h
        third_party/concurrency_kit/ck/include/ck_fifo.h
        third_party/concurrency_kit/ck/include/ck_hp.h
        third_party/concurrency_kit/ck/include/ck_hp_fifo.h
        third_party/concurrency_kit/ck/include/ck_hp_stack.h
        third_party/concurrency_kit/ck/include/ck_hs.h
        third_party/concurrency_kit/ck/include/ck_ht.h
        third_party/concurrency_kit/ck/include/ck_limits.h
        third_party/concurrency_kit/ck/include/ck_malloc.h
        third_party/concurrency_kit/ck/include/ck_pflock.h
        third_party/concurrency_kit/ck/include/ck_pr.h
        third_party/concurrency_kit/ck/include/ck_queue.h
        third_party/concurrency_kit/ck/include/ck_rhs.h
        third_party/concurrency_kit/ck/include/ck_ring.h
        third_party/concurrency_kit/ck/include/ck_rwcohort.h
        third_party/concurrency_kit/ck/include/ck_rwlock.h
        third_party/concurrency_kit/ck/include/ck_sequence.h
        third_party/concurrency_kit/ck/include/ck_spinlock.h
        third_party/concurrency_kit/ck/include/ck_stack.h
        third_party/concurrency_kit/ck/include/ck_stdbool.h
        third_party/concurrency_kit/ck/include/ck_stddef.h
        third_party/concurrency_kit/ck/include/ck_stdint.h
        third_party/concurrency_kit/ck/include/ck_stdlib.h
        third_party/concurrency_kit/ck/include/ck_string.h
        third_party/concurrency_kit/ck/include/ck_swlock.h
        third_party/concurrency_kit/ck/include/ck_tflock.h
        third_party/concurrency_kit/ck/regressions/ck_array/validate/serial.c
        third_party/concurrency_kit/ck/regressions/ck_backoff/validate/validate.c
        third_party/concurrency_kit/ck/regressions/ck_barrier/benchmark/throughput.c
        third_party/concurrency_kit/ck/regressions/ck_barrier/validate/barrier_centralized.c
        third_party/concurrency_kit/ck/regressions/ck_barrier/validate/barrier_combining.c
        third_party/concurrency_kit/ck/regressions/ck_barrier/validate/barrier_dissemination.c
        third_party/concurrency_kit/ck/regressions/ck_barrier/validate/barrier_mcs.c
        third_party/concurrency_kit/ck/regressions/ck_barrier/validate/barrier_tournament.c
        third_party/concurrency_kit/ck/regressions/ck_bitmap/validate/serial.c
        third_party/concurrency_kit/ck/regressions/ck_brlock/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_brlock/benchmark/throughput.c
        third_party/concurrency_kit/ck/regressions/ck_brlock/validate/validate.c
        third_party/concurrency_kit/ck/regressions/ck_bytelock/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_bytelock/validate/validate.c
        third_party/concurrency_kit/ck/regressions/ck_cohort/benchmark/ck_cohort.c
        third_party/concurrency_kit/ck/regressions/ck_cohort/benchmark/throughput.c
        third_party/concurrency_kit/ck/regressions/ck_cohort/validate/validate.c
        third_party/concurrency_kit/ck/regressions/ck_cohort/ck_cohort.h
        third_party/concurrency_kit/ck/regressions/ck_epoch/validate/ck_epoch_call.c
        third_party/concurrency_kit/ck/regressions/ck_epoch/validate/ck_epoch_poll.c
        third_party/concurrency_kit/ck/regressions/ck_epoch/validate/ck_epoch_section.c
        third_party/concurrency_kit/ck/regressions/ck_epoch/validate/ck_epoch_section_2.c
        third_party/concurrency_kit/ck/regressions/ck_epoch/validate/ck_epoch_synchronize.c
        third_party/concurrency_kit/ck/regressions/ck_epoch/validate/ck_stack.c
        third_party/concurrency_kit/ck/regressions/ck_epoch/validate/torture.c
        third_party/concurrency_kit/ck/regressions/ck_fifo/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_fifo/validate/ck_fifo_mpmc.c
        third_party/concurrency_kit/ck/regressions/ck_fifo/validate/ck_fifo_mpmc_iterator.c
        third_party/concurrency_kit/ck/regressions/ck_fifo/validate/ck_fifo_spsc.c
        third_party/concurrency_kit/ck/regressions/ck_fifo/validate/ck_fifo_spsc_iterator.c
        third_party/concurrency_kit/ck/regressions/ck_hp/benchmark/fifo_latency.c
        third_party/concurrency_kit/ck/regressions/ck_hp/benchmark/stack_latency.c
        third_party/concurrency_kit/ck/regressions/ck_hp/validate/ck_hp_fifo.c
        third_party/concurrency_kit/ck/regressions/ck_hp/validate/ck_hp_fifo_donner.c
        third_party/concurrency_kit/ck/regressions/ck_hp/validate/ck_hp_stack.c
        third_party/concurrency_kit/ck/regressions/ck_hp/validate/nbds_haz_test.c
        third_party/concurrency_kit/ck/regressions/ck_hp/validate/serial.c
        third_party/concurrency_kit/ck/regressions/ck_hs/benchmark/apply.c
        third_party/concurrency_kit/ck/regressions/ck_hs/benchmark/parallel_bytestring.c
        third_party/concurrency_kit/ck/regressions/ck_hs/benchmark/serial.c
        third_party/concurrency_kit/ck/regressions/ck_hs/validate/serial.c
        third_party/concurrency_kit/ck/regressions/ck_ht/benchmark/parallel_bytestring.c
        third_party/concurrency_kit/ck/regressions/ck_ht/benchmark/parallel_direct.c
        third_party/concurrency_kit/ck/regressions/ck_ht/benchmark/serial.c
        third_party/concurrency_kit/ck/regressions/ck_ht/validate/serial.c
        third_party/concurrency_kit/ck/regressions/ck_pflock/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_pflock/benchmark/throughput.c
        third_party/concurrency_kit/ck/regressions/ck_pflock/validate/validate.c
        third_party/concurrency_kit/ck/regressions/ck_pr/benchmark/benchmark.h
        third_party/concurrency_kit/ck/regressions/ck_pr/benchmark/ck_pr_add_64.c
        third_party/concurrency_kit/ck/regressions/ck_pr/benchmark/ck_pr_cas_64.c
        third_party/concurrency_kit/ck/regressions/ck_pr/benchmark/ck_pr_cas_64_2.c
        third_party/concurrency_kit/ck/regressions/ck_pr/benchmark/ck_pr_faa_64.c
        third_party/concurrency_kit/ck/regressions/ck_pr/benchmark/ck_pr_fas_64.c
        third_party/concurrency_kit/ck/regressions/ck_pr/benchmark/ck_pr_neg_64.c
        third_party/concurrency_kit/ck/regressions/ck_pr/benchmark/fp.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_add.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_and.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_bin.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_btc.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_btr.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_bts.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_btx.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_cas.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_dec.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_faa.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_fas.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_fax.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_inc.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_load.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_n.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_or.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_store.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_sub.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_unary.c
        third_party/concurrency_kit/ck/regressions/ck_pr/validate/ck_pr_xor.c
        third_party/concurrency_kit/ck/regressions/ck_queue/validate/ck_list.c
        third_party/concurrency_kit/ck/regressions/ck_queue/validate/ck_slist.c
        third_party/concurrency_kit/ck/regressions/ck_queue/validate/ck_stailq.c
        third_party/concurrency_kit/ck/regressions/ck_rhs/benchmark/parallel_bytestring.c
        third_party/concurrency_kit/ck/regressions/ck_rhs/benchmark/serial.c
        third_party/concurrency_kit/ck/regressions/ck_rhs/validate/serial.c
        third_party/concurrency_kit/ck/regressions/ck_ring/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_ring/validate/ck_ring_mpmc.c
        third_party/concurrency_kit/ck/regressions/ck_ring/validate/ck_ring_mpmc_template.c
        third_party/concurrency_kit/ck/regressions/ck_ring/validate/ck_ring_spmc.c
        third_party/concurrency_kit/ck/regressions/ck_ring/validate/ck_ring_spmc_template.c
        third_party/concurrency_kit/ck/regressions/ck_ring/validate/ck_ring_spsc.c
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/benchmark/ck_neutral.c
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/benchmark/ck_rp.c
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/benchmark/ck_wp.c
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/benchmark/latency.h
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/benchmark/throughput.h
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/validate/ck_neutral.c
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/validate/ck_rp.c
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/validate/ck_wp.c
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/validate/validate.h
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/ck_neutral.h
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/ck_rp.h
        third_party/concurrency_kit/ck/regressions/ck_rwcohort/ck_wp.h
        third_party/concurrency_kit/ck/regressions/ck_rwlock/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_rwlock/benchmark/throughput.c
        third_party/concurrency_kit/ck/regressions/ck_rwlock/validate/validate.c
        third_party/concurrency_kit/ck/regressions/ck_sequence/benchmark/ck_sequence.c
        third_party/concurrency_kit/ck/regressions/ck_sequence/validate/ck_sequence.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_anderson.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_cas.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_clh.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_dec.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_fas.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_hclh.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_mcs.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_spinlock.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_ticket.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/ck_ticket_pb.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/latency.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/linux_spinlock.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/benchmark/throughput.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_anderson.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_cas.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_clh.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_dec.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_fas.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_hclh.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_mcs.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_spinlock.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_ticket.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/ck_ticket_pb.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/linux_spinlock.c
        third_party/concurrency_kit/ck/regressions/ck_spinlock/validate/validate.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_anderson.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_cas.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_clh.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_dec.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_fas.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_hclh.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_mcs.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_spinlock.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_ticket.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/ck_ticket_pb.h
        third_party/concurrency_kit/ck/regressions/ck_spinlock/linux_spinlock.h
        third_party/concurrency_kit/ck/regressions/ck_stack/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_stack/validate/pair.c
        third_party/concurrency_kit/ck/regressions/ck_stack/validate/pop.c
        third_party/concurrency_kit/ck/regressions/ck_stack/validate/push.c
        third_party/concurrency_kit/ck/regressions/ck_stack/validate/serial.c
        third_party/concurrency_kit/ck/regressions/ck_swlock/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_swlock/benchmark/throughput.c
        third_party/concurrency_kit/ck/regressions/ck_swlock/validate/validate.c
        third_party/concurrency_kit/ck/regressions/ck_tflock/benchmark/latency.c
        third_party/concurrency_kit/ck/regressions/ck_tflock/benchmark/throughput.c
        third_party/concurrency_kit/ck/regressions/ck_tflock/validate/validate.c
        third_party/concurrency_kit/ck/regressions/common.h
        third_party/concurrency_kit/ck/src/ck_array.c
        third_party/concurrency_kit/ck/src/ck_barrier_centralized.c
        third_party/concurrency_kit/ck/src/ck_barrier_combining.c
        third_party/concurrency_kit/ck/src/ck_barrier_dissemination.c
        third_party/concurrency_kit/ck/src/ck_barrier_mcs.c
        third_party/concurrency_kit/ck/src/ck_barrier_tournament.c
        third_party/concurrency_kit/ck/src/ck_epoch.c
        third_party/concurrency_kit/ck/src/ck_hp.c
        third_party/concurrency_kit/ck/src/ck_hs.c
        third_party/concurrency_kit/ck/src/ck_ht.c
        third_party/concurrency_kit/ck/src/ck_ht_hash.h
        third_party/concurrency_kit/ck/src/ck_internal.h
        third_party/concurrency_kit/ck/src/ck_rhs.c
        third_party/luajit/luajit/dynasm/dasm_arm.h
        third_party/luajit/luajit/dynasm/dasm_arm64.h
        third_party/luajit/luajit/dynasm/dasm_mips.h
        third_party/luajit/luajit/dynasm/dasm_ppc.h
        third_party/luajit/luajit/dynasm/dasm_proto.h
        third_party/luajit/luajit/dynasm/dasm_x86.h
        third_party/luajit/luajit/src/host/buildvm.c
        third_party/luajit/luajit/src/host/buildvm.h
        third_party/luajit/luajit/src/host/buildvm_asm.c
        third_party/luajit/luajit/src/host/buildvm_fold.c
        third_party/luajit/luajit/src/host/buildvm_lib.c
        third_party/luajit/luajit/src/host/buildvm_libbc.h
        third_party/luajit/luajit/src/host/buildvm_peobj.c
        third_party/luajit/luajit/src/host/minilua.c
        third_party/luajit/luajit/src/lauxlib.h
        third_party/luajit/luajit/src/lib_aux.c
        third_party/luajit/luajit/src/lib_base.c
        third_party/luajit/luajit/src/lib_bit.c
        third_party/luajit/luajit/src/lib_debug.c
        third_party/luajit/luajit/src/lib_ffi.c
        third_party/luajit/luajit/src/lib_init.c
        third_party/luajit/luajit/src/lib_io.c
        third_party/luajit/luajit/src/lib_jit.c
        third_party/luajit/luajit/src/lib_math.c
        third_party/luajit/luajit/src/lib_os.c
        third_party/luajit/luajit/src/lib_package.c
        third_party/luajit/luajit/src/lib_string.c
        third_party/luajit/luajit/src/lib_table.c
        third_party/luajit/luajit/src/lj_alloc.c
        third_party/luajit/luajit/src/lj_alloc.h
        third_party/luajit/luajit/src/lj_api.c
        third_party/luajit/luajit/src/lj_arch.h
        third_party/luajit/luajit/src/lj_asm.c
        third_party/luajit/luajit/src/lj_asm.h
        third_party/luajit/luajit/src/lj_asm_arm.h
        third_party/luajit/luajit/src/lj_asm_arm64.h
        third_party/luajit/luajit/src/lj_asm_mips.h
        third_party/luajit/luajit/src/lj_asm_ppc.h
        third_party/luajit/luajit/src/lj_asm_x86.h
        third_party/luajit/luajit/src/lj_bc.c
        third_party/luajit/luajit/src/lj_bc.h
        third_party/luajit/luajit/src/lj_bcdump.h
        third_party/luajit/luajit/src/lj_bcread.c
        third_party/luajit/luajit/src/lj_bcwrite.c
        third_party/luajit/luajit/src/lj_buf.c
        third_party/luajit/luajit/src/lj_buf.h
        third_party/luajit/luajit/src/lj_carith.c
        third_party/luajit/luajit/src/lj_carith.h
        third_party/luajit/luajit/src/lj_ccall.c
        third_party/luajit/luajit/src/lj_ccall.h
        third_party/luajit/luajit/src/lj_ccallback.c
        third_party/luajit/luajit/src/lj_ccallback.h
        third_party/luajit/luajit/src/lj_cconv.c
        third_party/luajit/luajit/src/lj_cconv.h
        third_party/luajit/luajit/src/lj_cdata.c
        third_party/luajit/luajit/src/lj_cdata.h
        third_party/luajit/luajit/src/lj_char.c
        third_party/luajit/luajit/src/lj_char.h
        third_party/luajit/luajit/src/lj_clib.c
        third_party/luajit/luajit/src/lj_clib.h
        third_party/luajit/luajit/src/lj_cparse.c
        third_party/luajit/luajit/src/lj_cparse.h
        third_party/luajit/luajit/src/lj_crecord.c
        third_party/luajit/luajit/src/lj_crecord.h
        third_party/luajit/luajit/src/lj_ctype.c
        third_party/luajit/luajit/src/lj_ctype.h
        third_party/luajit/luajit/src/lj_debug.c
        third_party/luajit/luajit/src/lj_debug.h
        third_party/luajit/luajit/src/lj_def.h
        third_party/luajit/luajit/src/lj_dispatch.c
        third_party/luajit/luajit/src/lj_dispatch.h
        third_party/luajit/luajit/src/lj_emit_arm.h
        third_party/luajit/luajit/src/lj_emit_arm64.h
        third_party/luajit/luajit/src/lj_emit_mips.h
        third_party/luajit/luajit/src/lj_emit_ppc.h
        third_party/luajit/luajit/src/lj_emit_x86.h
        third_party/luajit/luajit/src/lj_err.c
        third_party/luajit/luajit/src/lj_err.h
        third_party/luajit/luajit/src/lj_errmsg.h
        third_party/luajit/luajit/src/lj_ff.h
        third_party/luajit/luajit/src/lj_ffrecord.c
        third_party/luajit/luajit/src/lj_ffrecord.h
        third_party/luajit/luajit/src/lj_frame.h
        third_party/luajit/luajit/src/lj_func.c
        third_party/luajit/luajit/src/lj_func.h
        third_party/luajit/luajit/src/lj_gc.c
        third_party/luajit/luajit/src/lj_gc.h
        third_party/luajit/luajit/src/lj_gdbjit.c
        third_party/luajit/luajit/src/lj_gdbjit.h
        third_party/luajit/luajit/src/lj_ir.c
        third_party/luajit/luajit/src/lj_ir.h
        third_party/luajit/luajit/src/lj_ircall.h
        third_party/luajit/luajit/src/lj_iropt.h
        third_party/luajit/luajit/src/lj_jit.h
        third_party/luajit/luajit/src/lj_lex.c
        third_party/luajit/luajit/src/lj_lex.h
        third_party/luajit/luajit/src/lj_lib.c
        third_party/luajit/luajit/src/lj_lib.h
        third_party/luajit/luajit/src/lj_load.c
        third_party/luajit/luajit/src/lj_mcode.c
        third_party/luajit/luajit/src/lj_mcode.h
        third_party/luajit/luajit/src/lj_meta.c
        third_party/luajit/luajit/src/lj_meta.h
        third_party/luajit/luajit/src/lj_obj.c
        third_party/luajit/luajit/src/lj_obj.h
        third_party/luajit/luajit/src/lj_opt_dce.c
        third_party/luajit/luajit/src/lj_opt_fold.c
        third_party/luajit/luajit/src/lj_opt_loop.c
        third_party/luajit/luajit/src/lj_opt_mem.c
        third_party/luajit/luajit/src/lj_opt_narrow.c
        third_party/luajit/luajit/src/lj_opt_sink.c
        third_party/luajit/luajit/src/lj_opt_split.c
        third_party/luajit/luajit/src/lj_parse.c
        third_party/luajit/luajit/src/lj_parse.h
        third_party/luajit/luajit/src/lj_profile.c
        third_party/luajit/luajit/src/lj_profile.h
        third_party/luajit/luajit/src/lj_record.c
        third_party/luajit/luajit/src/lj_record.h
        third_party/luajit/luajit/src/lj_snap.c
        third_party/luajit/luajit/src/lj_snap.h
        third_party/luajit/luajit/src/lj_state.c
        third_party/luajit/luajit/src/lj_state.h
        third_party/luajit/luajit/src/lj_str.c
        third_party/luajit/luajit/src/lj_str.h
        third_party/luajit/luajit/src/lj_strfmt.c
        third_party/luajit/luajit/src/lj_strfmt.h
        third_party/luajit/luajit/src/lj_strfmt_num.c
        third_party/luajit/luajit/src/lj_strscan.c
        third_party/luajit/luajit/src/lj_strscan.h
        third_party/luajit/luajit/src/lj_tab.c
        third_party/luajit/luajit/src/lj_tab.h
        third_party/luajit/luajit/src/lj_target.h
        third_party/luajit/luajit/src/lj_target_arm.h
        third_party/luajit/luajit/src/lj_target_arm64.h
        third_party/luajit/luajit/src/lj_target_mips.h
        third_party/luajit/luajit/src/lj_target_ppc.h
        third_party/luajit/luajit/src/lj_target_x86.h
        third_party/luajit/luajit/src/lj_trace.c
        third_party/luajit/luajit/src/lj_trace.h
        third_party/luajit/luajit/src/lj_traceerr.h
        third_party/luajit/luajit/src/lj_udata.c
        third_party/luajit/luajit/src/lj_udata.h
        third_party/luajit/luajit/src/lj_vm.h
        third_party/luajit/luajit/src/lj_vmevent.c
        third_party/luajit/luajit/src/lj_vmevent.h
        third_party/luajit/luajit/src/lj_vmmath.c
        third_party/luajit/luajit/src/ljamalg.c
        third_party/luajit/luajit/src/lua.h
        third_party/luajit/luajit/src/lua.hpp
        third_party/luajit/luajit/src/luaconf.h
        third_party/luajit/luajit/src/luajit.c
        third_party/luajit/luajit/src/luajit.h
        third_party/luajit/luajit/src/lualib.h)

add_executable(sysbench ${SOURCE_FILES})